[package]
name = "preprocessing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fs-err = "2.11.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.8.1"
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
common = { path = "./common" }

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "calculate_current_times"
path = "calculate_current_times/src/main.rs"